--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="layout__body">
-        <h2 class="auth__tagline">Find your fellow careershift homie!</h2>
+        <h2 class="auth__tagline">Find your fellow careershift friend!</h2>
 
         <form class="form" action="" method="POST">
           {% csrf_token %}
@@ -86,8 +86,8 @@
         </form>
 
         <div class="auth__action">
-          <p>Already signed up ? make the shifty </p>
-          <a href="{% url 'login' %}" class="btn btn--link">Sign Up</a>
+          <p>Already signed up ? Make the shift back to login!</p>
+          <a href="{% url 'login' %}" class="btn btn--link">Log in</a>
         </div>
       </div>
     </div>
